Added flexbox examples  - Colors  - Background  - Anchors  - Borders  - Visible and hidden
 Changes to be committed:
	modified:   docs/assets/css/style.css
	modified:   docs/assets/css/style.styl
	modified:   docs/assets/js/highlight/monokai-sublime.css
	modified:   docs/index.html
	modified:   docs/index.pug
	modified:   docs/layout.pug
	modified:   docs/mixins.pug
	modified:   docs/partials/flexbox.pug

--- a/docs/assets/css/style.styl
+++ b/docs/assets/css/style.styl
@@ -59,20 +59,23 @@ body
 				background palette('Purple', '800')
 
 table
+	&.purple
+		thead
+			tr
+				background palette('Purple', '800')
+				color paletteText('Purple', '800')
+		tbody
+			tr:not(:nth-child(odd))
+				background palette('Purple', '100')
+				color paletteText('Purple', '100')
 	thead
-		tr
-			background palette('Purple', '800')
-			color paletteText('Purple', '800')
-			th
-				padding 1em
-				font-weight 400
+		th
+			padding 1em
+			font-weight 400
 	tbody
 		tr
-			background palette('Purple', '800')
-			color paletteText('Purple', '800')
 			td
 				padding 0.5em
-				text-align center
 				&:first-child
 					text-align left
 				&.success
@@ -81,4 +84,6 @@ table
 				&.disabled
 					background palette('Grey', '200')
 					color palette('Grey', '500')
-		
+
+code
+	padding 1em 2em!important
