--- a/docs/layout.pug
+++ b/docs/layout.pug
@@ -1,7 +1,8 @@
 doctype
 html
 	head
-		link(rel="stylesheet" href="https://rawgit.com/fdorantesm/oocss/master/bootstrap.css")
+		//- link(rel="stylesheet" href="https://rawgit.com/fdorantesm/oocss/master/bootstrap.css")
+		link(rel="stylesheet" href="../bootstrap.css")
 		link(rel="stylesheet" href="assets/css/style.css")
 		link(rel="stylesheet" href="assets/js/highlight/monokai-sublime.css")
 		meta(charset="UTF-8")
