Renamed cursor classes  - Replace loop and full name with short name  - Added a json cursor types in variables
 Changes to be committed:
	modified:   bootstrap.css
	modified:   util/helpers/cursor.styl

--- a/util/helpers/cursor.styl
+++ b/util/helpers/cursor.styl
@@ -1,6 +1,3 @@
-cursors = default pointer text wait not-allowed
-
-.cursor
-	for value in cursors
-		&.{value}
-			cursor value
+for value in $cursors
+	.cur{value}
+		cursor $cursors[value]
