Added cursor to vars && display classes added to docs
 Changes to be committed:
	modified:   docs/index.html
	modified:   util/variables.styl

--- a/util/variables.styl
+++ b/util/variables.styl
@@ -51,6 +51,14 @@ $sides = {
 	'b': bottom
 }
 
+$cursors = {
+	'd':default,
+	'p': pointer,
+	't': text, 
+	'w': wait,
+	'na': not-allowed
+}
+
 $font-family-sans-serif =  "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif =       Georgia, "Times New Roman", Times, serif;
 $font-family-monospace =   Menlo, Monaco, Consolas, "Courier New", monospace;
