--- a/util/mixins.styl
+++ b/util/mixins.styl
@@ -3,7 +3,19 @@
 
 class(prefix, attr, type, from=0, to=50, gap=5, important=false)
 	for x in (from/gap)..(to/gap)
-		val = isDecimal(x*gap) ? unit(percentage(x*gap),'') : x*gap
+		// val = !isDecimal(x*gap) ?  x*gap: isDecimal(unit(percentage(x*gap),'')) ? unit(percentage(x*gap),'') * 100 : unit(percentage(x*gap),'')
+		
+		value = x*gap
+		
+		if isDecimal(value)
+			val = unit(percentage(value),'')
+			
+		else
+			if isDecimal(gap)
+				val = unit(percentage(value),'') % 100 == 0 ? value * 100 : value
+			else
+				val = value
+			
 		.{prefix}{val}
 			{attr} unit(gap*x, type) (important ? !important : null)
 
