Moved margin styles from list to margin-and-padding file  - Added .normalized class to body to avoid colisions
 Changes to be committed:
	modified:   ../util/helpers/generals.styl
	modified:   ../util/helpers/list.styl
	modified:   ../util/helpers/margin-and-padding.styl

--- a/util/helpers/margin-and-padding.styl
+++ b/util/helpers/margin-and-padding.styl
@@ -1,3 +1,9 @@
+.ma
+	margin auto
+	
+.m0a
+	margin 0 auto
+	
 class(m,  margin, px, 0, 50, 5)
 class(mt, margin-top, px, 0, 50, 5)
 class(ml, margin-left, px, 0, 50, 5)
