--- a/util/helpers/list.styl
+++ b/util/helpers/list.styl
@@ -1,21 +1,13 @@
 .lsn
 	list-style none
 
-.ma
-	margin auto
-	
-.m0a
-	margin 0 auto
-
 .list-reset
 	padding 0
 	margin 0
 	@extends .lsn
 	
 for x in 1..4
-	.cols-{x}
-		-webkit-columns: x
-		-moz-columns: x
+	.list-col-{x}
 		columns: x
 		
 ul, ol
