Height article title missing
 Changes to be committed:
	modified:   docs/index.html
	modified:   docs/index.pug

--- a/docs/index.pug
+++ b/docs/index.pug
@@ -385,7 +385,7 @@ block main
 											- x+= 0.5
 					article
 						.p10
-							h3.fw300.fsp26
+							h3.fw300.fsp26 Heights
 						.p10
 							table.table.purple.fw
 								thead
