Splited index articles into its own files  - Removed show-and-hide.html  - Renamed show-and-hide to visible-and-hidden
 Changes to be committed:
	modified:   docs/index.html
	modified:   docs/index.pug
	deleted:    docs/partials/show-and-hide.html
	modified:   docs/partials/visible-and-hidden.pug

--- a/docs/index.pug
+++ b/docs/index.pug
@@ -35,718 +35,20 @@ block main
 			.col-lg-9
 				section.grid
 					include partials/flexbox
-				section.show-and-hide
-					include partials/visible-and-hidden
 				section.helpers
-					article
-						.p10
-							h3.fw300.fsp26 Anchors
-							p These styles set down the browser text decoration on hover, the outline and add a transition on hover
-							a(href="javascript:void(0)") This is a simple anchor
-						.p10
-							code.html
-								pre
-									+scape()
-										<a href="#">This is a simple anchor</a>
-					article
-						.p10
-							h3.fw300.fsp26 Background
-							p Theses styles has some background properties as colors, attachment or size
-							.pt10.pb10
-								span.bcE This text has background #EEE and its div is using the class bcE
-						.p10
-							code.html
-								pre
-									+scape()
-										<span class="bcE">This text has background #EEE and its span is using the class bcE</span>
-						.p10
-							table.purple.fw.table
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									each color, key in {0:"#000", 3:"#333", 6:"#666", 9:"#999", A:"#AAA", C:"#CCC", E:"#EEE", F:"#FFF"}
-										tr
-											td .bc#{key}
-											td background-color
-											td= color
-					article
-						.p10
-							h3.fw300.fsp26 Border
-						.p10
-							table.table.fw.purple
-								thead
-									tr
-										th Class
-										th.tal Property
-										th.tal Value
-								tbody
-									tr
-										td .bn
-										td.tal border
-										td.tal none
-									tr
-										td .bsn
-										td.tal border-style
-										td.tal none
-									tr
-										td .bss
-										td.tal border-style
-										td.tal solid
-									tr
-										td .bsw
-										td.tal border-style
-										td.tal wavy
-									tr
-										td .bsda
-										td.tal border-style
-										td.tal dashed
-									tr
-										td .bsdo
-										td.tal border-style
-										td.tal dotted
-									tr
-										td .btss
-										td.tal border-top-style
-										td.tal solid
-									tr
-										td .btsw
-										td.tal border-top-style
-										td.tal wavy
-									tr
-										td .btsda
-										td.tal border-top-style
-										td.tal dashed
-									tr
-										td .btsdo
-										td.tal border-top-style
-										td.tal dotted
-									tr
-										td .blss
-										td.tal border-left-style
-										td.tal solid
-									tr
-										td .blsw
-										td.tal border-left-style
-										td.tal wavy
-									tr
-										td .blsda
-										td.tal border-left-style
-										td.tal dashed
-									tr
-										td .blsdo
-										td.tal border-left-style
-										td.tal dotted
-									tr
-										td .brss
-										td.tal border-right-style
-										td.tal solid
-									tr
-										td .brsw
-										td.tal border-right-style
-										td.tal wavy
-									tr
-										td .brsda
-										td.tal border-right-style
-										td.tal dashed
-									tr
-										td .brsdo
-										td.tal border-right-style
-										td.tal dotted
-									tr
-										td .bbss
-										td.tal border-bottom-style
-										td.tal solid
-									tr
-										td .bbsw
-										td.tal border-bottom-style
-										td.tal wavy
-									tr
-										td .bbsda
-										td.tal border-bottom-style
-										td.tal dashed
-									tr
-										td .bbsdo
-										td.tal border-bottom-style
-										td.tal dotted
-									each value, key in {"br":"border-radius", "bw":"border-width", "btw":"border-top-width", "blw":"border-left-width", "brw":"border-right-width", "brw":"border-bottom-width"}
-										each i in [1,2,3,4,5,6,7,8,9,10]
-											tr
-												td .#{key}
-												td.tal #{value}
-												td.tal #{i}px
-					article
-						.p10
-							h3.fw300.fsp26 Box sizing
-							table.table.fw.purple
-								thead
-									tr
-										th Class
-										th.tal Value
-										th.tal Description
-								tbody
-									tr
-										td .bsb
-										td.tal border-box
-										td.tal The width and height properties (and min/max properties) includes content, padding and border.
-									tr
-										td .bsc
-										td.tal content-box
-										td.tal The width and height properties (and min/max properties) includes only the content. Border and padding are not included.
-					article
-						.p10
-							h3.fw300.fsp26 Colors
-							p These classes has some color properties
-							.pt10.pb10
-								span.cF.bc0 This text has color #FFF with .cF class
-						.p10
-							code.html
-								pre
-									+scape()
-										<span class="cF bc0">This text has color #FFF with .cF class</span>
-						.p10
-							table.purple.fw.table
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									each color, key in {0:"#000", 3:"#333", 6:"#666", 9:"#999", A:"#AAA", C:"#CCC", E:"#EEE", F:"#FFF"}
-										tr
-											td .c#{key}
-											td color
-											td= color
-					article
-						.p10
-							h3.fw300.fsp26 Cursors
-							p These are 5 classes with the most used cursors
-						.p10
-							table.purple.fw.table
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									each tipo, key in {d:"default", p:"pointer", t:"text", w:"wait", na:"not-allowed"}
-										tr
-											td .cur#{key}
-											td cursor
-											td= tipo
-					article
-						.p10
-							h3.fw300.fsp26 Display
-						.p10
-							table.purple.fw.table
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									each clase, key in {db:"block", di: "inline", dib: "inline-block", dt: "table", dtc: "table-cell", dtr: "table-row", dtrg: "table-row-group", dfx: "flex", dn: "none"}
-										tr
-											td .#{key}
-											td display
-											td= clase
-					article
-						.p10
-							h3.fw300.fsp26 Flex
-						.p10
-							table.purple.fw.table
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									tr
-										td .jcc
-										td justify-content
-										td center
-									tr
-										td .jcfs
-										td justify-content
-										td flex-start
-									tr
-										td .jcfe
-										td justify-content
-										td flex-end
-									tr
-										td .jcsa
-										td justify-content
-										td space-around
-									tr
-										td .jcsb
-										td justify-content
-										td space-between
-									tr
-										td .jcs
-										td justify-content
-										td stretch
-									tr
-										td .jcu
-										td justify-content
-										td unset
-									tr
-										td .aic
-										td align-items
-										td center
-									tr
-										td .aifs
-										td align-items
-										td flex-start
-									tr
-										td .aife
-										td align-items
-										td flex-end
-									tr
-										td .aiu
-										td align-items
-										td unset
-									tr
-										td .fdr
-										td flex-direction
-										td row
-									tr
-										td .fdrr
-										td flex-direction
-										td row-reverse
-									tr
-										td .fdc
-										td flex-direction
-										td column
-									tr
-										td .fdcr
-										td flex-direction
-										td column-reverse
-									tr
-										td .fww
-										td flex-wrap
-										td wrap
-									tr
-										td .fwwr
-										td flex-wrap
-										td wrap-reverse
-									tr
-										td .fwnw
-										td flex-wrap
-										td nowrap
-									each i in [0,1,2,3,4,5,6]
-										tr
-											td .fg#{i}
-											td flex-grow
-											td= i
-									each i in [0,1,2,3,4,5,6]
-										tr
-											td .fsh#{i}
-											td flex-shrink
-											td= i
-					article
-						.p10
-							h3.fw300.fsp26 Font
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									each i in [100,200,300,400,500,600,700,800,900]
-										tr
-											td #{'.fw' + i}
-											td font-weight
-											td= i
-									- var x = 8
-									while x <= 48
-										tr
-											td #{'.fsp' + x}
-											td font-size
-											td #{x + 'px'}
-										- x+= 2
-									- var x = 50
-									while x <= 100
-										tr
-											td #{'.fsp' + x}
-											td font-size
-											td #{x + 'px'}
-										- x+= 10
-									each type, key in {e:'em', r:'rem'}
-										- var x = 0.5
-										while x <= 3
-											tr
-												td #{'.fs' + key + (x*100)}
-												td font-size
-												td #{x + type}
-											- x+= 0.5
-					article
-						.p10
-							h3.fw300.fsp26 Heights
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Height
-								tbody
-									each i in [0,1,2,3,4,5,6,7,8,9]
-										tr
-											td #{'.h' + i*5}
-											td height
-											td #{i*5 + 'px'}
-									each i in [5,6,7,8,9]
-										tr
-											td #{'.h' + i*10}
-											td height
-											td #{i*10 + 'px'}
-									each i in [1,2,3,4,5]
-										tr
-											td #{'.h' + i*100}
-											td height
-											td #{i*100 + 'px'}
-					article
-						.p10
-							h3.fw300.fsp26 List
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									tr
-										td .lsn
-										td list-style
-										td none
-									tr
-										td .lsd
-										td list-style
-										td decimal
-									tr
-										td .lsdlz
-										td list-style
-										td decimal-leading-zero
-									tr
-										td .lsla
-										td list-style
-										td lower-alpha
-									tr
-										td .lslr
-										td list-style
-										td lower-roman
-									tr
-										td .lsua
-										td list-style
-										td upper-alpha
-									tr
-										td .lsur
-										td list-style
-										td upper-roman
-									each i in [1,2,3,4]
-										tr
-											td .list-col-#{i}
-											td columns
-											td= i
-							h4.fw300 Aux classes
-							code.stylus
-								pre.
-									.list-reset
-										padding 0
-										margin 0
-										@extends .lsn
-
-									.list-inline li
-										display inline-block
-
-							div
-								h4.fw300 List inline
-								ul.list-inline
-									li item
-									li item
-									li item
-									li item
-								code.html
-									pre
-										+scape()
-											ul.list-inline
-												li item
-												li item
-												li item
-												li item
-
-							div 
-								h4.fw300 List without browser styles
-								ul.list-reset
-									li item
-									li item
-									li item
-									li item
-									li item
-								code.html
-									pre
-										+scape()
-											ul.list-reset
-												li item
-												li item
-												li item
-												li item
-												li item
-							div 
-								h4.fw300 Both classes
-								ul.list-reset.list-inline
-									li item
-									li item
-									li item
-									li item
-								code.html
-									pre
-										+scape()
-											ul.list-reset.list-inline
-												li item
-												li item
-												li item
-												li item
-												li item
-					article
-						.p10
-							h3.fw300.fsp26 Margin and padding
-							p This classes allows add margin or padding, exists 5 ways: left, top, right, bottom and its shorthand
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									tr
-										td .ma
-										td margin
-										td auto
-									tr
-										td .m0a
-										td margin
-										td 0 auto
-									- var i = 0;
-									while i <= 50
-										tr
-											td .m#{i}
-											td margin
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .mt#{i}
-											td margin-top
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .mr#{i}
-											td margin-right
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .ml#{i}
-											td margin-left
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .mb#{i}
-											td margin-bottom
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .p#{i}
-											td padding
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .pt#{i}
-											td padding-top
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .pr#{i}
-											td padding-right
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .pl#{i}
-											td padding-left
-											td #{i}px
-
-										- i+=5
-
-									- var i = 0;
-									while i <= 50
-										tr
-											td .pb#{i}
-											td padding-bottom
-											td #{i}px
-
-										- i+=5
-						.p10
-							p.pt10.pb10.pl10.bc3.cF This parragraph has padding 10px on top, bottom and left sides
-							p.mt10.ml10.bc3.cF And this one has margin-top 10px and margin-left 10px
-						.p10
-							code.html
-								pre
-									+scape()
-										p.pt10.pb10.pl10 This parragraph has padding 10px on top, bottom and left sides
-										p.mt10.ml10 And this one has margin-top 10px and margin-left 10px
-					article
-						.p10
-							h3.fw300.fsp26 Opacity and visibility
-
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									tr
-										td .o0
-										td opacity
-										td 0
-
-									tr
-										td .o25
-										td opacity
-										td 0.25
-									tr
-										td .o50
-										td opacity
-										td 0.50
-									tr
-										td .o75
-										td opacity
-										td 0.75
-									tr
-										td .o100
-										td opacity
-										td 1
-									tr
-										td .vh
-										td visibility 
-										td hidden
-									tr
-										td .vv
-										td visibility 
-										td visible
-									tr
-										td .vc
-										td visibility 
-										td collapse
-									tr
-										td .vu
-										td visibility 
-										td unset
-					article
-						.p10
-							h3.fw300.fsp26 Position
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									tr
-										td .pr
-										td position
-										td relative
-									tr
-										td .pa
-										td position
-										td absolute
-									tr
-										td .ps
-										td position
-										td static
-									tr
-										td .pf
-										td position
-										td fixed
-									tr
-										td .pu
-										td position
-										td unset
-									each type, key in {t: 'top', l: 'left', r: 'right', b: 'bottom'}
-										- var i = 0
-										while i <= 50
-											tr
-												td .#{key + i}
-												td= type
-												td #{i}px
-											- i+=5
-					article
-						.p10
-							h3.fw300.fsp26 Floats
-						.p10
-							table.table.purple.fw
-								thead
-									tr
-										th Class
-										th Property
-										th Value
-								tbody
-									tr
-										td .fr
-										td float
-										td left
-									tr
-										td .fl
-										td float
-										td left
-									tr
-										td .fr
-										td float
-										td right
-									tr
-										td .fu
-										td float
-										td unset
-									tr
-										td .fn
-										td float
-										td none
+					include partials/visible-and-hidden
+					include partials/background
+					include partials/border
+					include partials/box-sizing
+					include partials/color
+					include partials/cursor
+					include partials/display
+					include partials/flex
+					include partials/font
+					include partials/height
+					include partials/list
+					include partials/margin-and-padding
+					include partials/opacity-and-visibility
+					include partials/position
+					include partials/float
+					include partials/text
