--- a/docs/partials/visible-and-hidden.pug
+++ b/docs/partials/visible-and-hidden.pug
@@ -1,6 +1,6 @@
 article
 	.p10
-		h3.fw300.fsp26 Show and hide
+		h3.fw300.fsp26 Visible and hidden
 		p This aux classes let you hide and show elements through resolutions
 		table.table.fixed.fw
 			thead
