Last commit changes
 Changes to be committed:
	modified:   ../util/helpers/visible-and-hidden.styl
	modified:   ../util/mixins.styl

--- a/util/mixins.styl
+++ b/util/mixins.styl
@@ -161,3 +161,16 @@ breakpoint(size, point)
 
 ifFlex()
 	return $grid-system == 'flex'
+	
+collapse()
+	display none
+	// height 0
+	// overflow hidden
+	// transition all 0.5s linear
+	// visibility collapse!important
+	// width 0
+
+visible()
+	display initial
+	// transition all 0.5s linear
+	// visibility visible!important
