--- a/util/helpers/visible-and-hidden.styl
+++ b/util/helpers/visible-and-hidden.styl
@@ -1,38 +1,38 @@
 .visible, .hidden-sm, .hidden-md, .hidden-md-below, .hidden-md-above, .hidden-lg, .hidden-sm-above, .visible-sm-below, .visible-sm-above
-	display block
+	visible()
 	
 .hidden, .hidden-xs, .visible-xs, .visible-sm, .visible-md, .visible-lg, .visible-md-above, .visible-md-below, .hidden-sm-below, .hidden-md-below
-	display none
+	collapse()
 
 +xs()
 		
 	.hidden-md-below, .visible-sm-above
-		display none!important
+		collapse()
 	
 	.visible-xs, .visible-md-below
-		display block!important
+		visible()
 		
 
 +sm()
 	
 	.hidden-sm, .hidden-md-below, .hidden-sm-above
-		display none!important
+		collapse()
 
 	.visible-md-below, .hidden-xs, .visible-sm
-		display block!important
+		visible()
 
 +md()
 	
 	.hidden-md, .hidden-md-below, .hidden-md-above, .hidden-sm-above, .visible-sm-below
-		display none!important
+		collapse()
 	
 	.visible-md, .visible-md-above, .visible-md-below, .hidden-lg, .hidden-sm-below, .hidden-xs
-		display block!important
+		visible()
 
 +lg()
 	
 	.hidden-md-above, .hidden-lg, .hidden-sm-above, .visible-sm-below
-		display none!important
+		collapse()
 	
 	.hidden-xs, .visible-lg, .visible-md-above, .hidden-md-below, .hidden-sm-below
-		display block!important
+		visible()
