Removed commented code and renamed visible and hide mixins
 Changes to be committed:
	modified:   util/helpers/visible-and-hidden.styl
	modified:   util/mixins.styl

--- a/util/mixins.styl
+++ b/util/mixins.styl
@@ -162,15 +162,8 @@ breakpoint(size, point)
 ifFlex()
 	return $grid-system == 'flex'
 	
-collapse()
+hide()
 	display none
-	// height 0
-	// overflow hidden
-	// transition all 0.5s linear
-	// visibility collapse!important
-	// width 0
 
-visible()
+show()
 	display initial
-	// transition all 0.5s linear
-	// visibility visible!important
