--- a/util/helpers/visible-and-hidden.styl
+++ b/util/helpers/visible-and-hidden.styl
@@ -1,38 +1,38 @@
 .visible, .hidden-sm, .hidden-md, .hidden-md-below, .hidden-md-above, .hidden-lg, .hidden-sm-above, .visible-sm-below, .visible-sm-above
-	visible()
+	show()
 	
 .hidden, .hidden-xs, .visible-xs, .visible-sm, .visible-md, .visible-lg, .visible-md-above, .visible-md-below, .hidden-sm-below, .hidden-md-below
-	collapse()
+	hide()
 
 +xs()
 		
 	.hidden-md-below, .visible-sm-above
-		collapse()
+		hide()
 	
 	.visible-xs, .visible-md-below
-		visible()
+		show()
 		
 
 +sm()
 	
 	.hidden-sm, .hidden-md-below, .hidden-sm-above
-		collapse()
+		hide()
 
 	.visible-md-below, .hidden-xs, .visible-sm
-		visible()
+		show()
 
 +md()
 	
 	.hidden-md, .hidden-md-below, .hidden-md-above, .hidden-sm-above, .visible-sm-below
-		collapse()
+		hide()
 	
 	.visible-md, .visible-md-above, .visible-md-below, .hidden-lg, .hidden-sm-below, .hidden-xs
-		visible()
+		show()
 
 +lg()
 	
 	.hidden-md-above, .hidden-lg, .hidden-sm-above, .visible-sm-below
-		collapse()
+		hide()
 	
 	.hidden-xs, .visible-lg, .visible-md-above, .hidden-md-below, .hidden-sm-below
-		visible()
+		show()
