Added table striped and table responsive  - Removed static prefix on grid mixin  - Fix min and max params media query query on breakpint mixin  - Added universal and pseudoelements box-sizing
 Changes to be committed:
	modified:   bootstrap.css
	modified:   bootstrap.styl
	modified:   util/grid.styl
	modified:   util/helpers/table.styl
	modified:   util/mixins.styl

--- a/bootstrap.styl
+++ b/bootstrap.styl
@@ -24,3 +24,7 @@
 @import 'util/helpers/table'
 @import 'util/helpers/text'
 @import 'util/helpers/z-index'
+
+*, :before, :after
+	box-sizing border-box
+	
